a11y: do not expose a label text if 'hidden' style class is used

https://bugzilla.gnome.org/show_bug.cgi?id=675341